--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
 body {
-  background: rgb(104,71,228);
-background: linear-gradient(90deg, rgba(104,71,228,1) 0%, rgba(117,72,244,1) 50%, rgba(140,116,215,1) 100%);
+  background: rgb(248,192,216);
+background: radial-gradient(circle, rgba(248,192,216,1) 0%, rgba(221,234,248,1) 100%);
   text-align: center;
 }
 
 h1 {
-  color: #FFF; 
-  opacity: 0.8;
+  color: #000; 
+  opacity: 0.7;
+  font-size: 38px;
+  margin-top: 4%;
 }
 
 p {
-  color: #FFF;
-  opacity: 0.7;
+  color: #000;
+  opacity: 0.6;
+  font-size: 14px;
 }
 
 #pop-up {
   display: none;
+  background-color: aliceblue;
+  border-radius: .5px;
+  border-color: #000;
+  width: 40%;
+  margin: auto;
+}
 
+form {
+  width: 30%;
+  margin: auto;
 }
 
 
@@ -27,4 +39,13 @@ ul {
 ul li {
   padding: 0;
   list-style-type: none;
+  
+}
+
+button {
+  border-radius: 0.5px;
+  border-color: aliceblue;
+  background-color: #000;
+  color: aliceblue;
+  font-size: 18px;
 }
