--- a/style.css
+++ b/style.css
@@ -9,26 +9,45 @@ h1 {
   opacity: 0.7;
   font-size: 38px;
   margin-top: 4%;
+  z-index: 2;
 }
 
 p {
   color: #000;
   opacity: 0.6;
   font-size: 14px;
+  z-index: 2;
 }
 
 #pop-up {
+  position: fixed;
   display: none;
   background-color: aliceblue;
-  border-radius: 5px;
+  border-radius: 10px;
   border-color: #000;
   width: 40%;
-  margin: auto;
+  margin-left: 30%;
+  margin-top: 3%;
+  z-index: 999;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 20px;
+}
+.close:hover, 
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 form {
   width: 30%;
   margin: auto;
+  padding: 30px;
+  font-size: 20px;
 }
 
 
@@ -49,3 +68,134 @@ button {
   color: aliceblue;
   font-size: 18px;
 }
+
+#book-container {
+  display: flex;
+  margin-left: 2%;
+  max-width: 96%;
+  z-index: 1;
+}
+
+.book {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  min-width: 20%;
+  width: 200px;
+  height: 250px;
+  border: 2px solid gray;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+.title {
+  font-size: 30px;
+  margin: 3px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: 500;
+}
+
+.author {
+  font-size: 20px;
+  margin: 5px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.pages {
+  font-size: 20px;
+  margin: 5px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+
+.delete {
+  display: block;
+  margin-left: auto;
+  margin-right: 5px;
+  color: #000;
+  text-align: center;
+  font-size: 10px;
+  background: white;
+  width: 22px;
+  height: 15px;
+  border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px -8px -1px,rgba(0, 0, 0, .14) 0 6px 5px 0,rgba(0, 0, 0, .12) 0 1px 7px 0;
+}
+.delete:hover {
+  background: #F6F9FE;
+  color: #174ea6;
+}
+
+
+/* button format by google */
+.button-17 {
+  margin: 9%;
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
+}
+
+.button-17:hover {
+  background: #F6F9FE;
+  color: #174ea6;
+}
+
+.button-17:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
+.button-17:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.button-17:not(:disabled) {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):hover {
+  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+}
+
+.button-17:not(:disabled):focus {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):active {
+  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+}
+
+.button-17:disabled {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+
